# smartchat

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/api/alembic/: alembic.ini  env.py
apps/api/alembic/versions/: 0001_initial.py  0002_p2.py  0003_p3.py  0004_whatsapp_bsp.py  (+1 more)
apps/api/app/: backfill_wa_lid_phones.py  db.py  deps.py  main.py  seed.py  set_plan.py  settings.py
apps/api/tests/: test_event_envelope.py  test_graph_schema.py  test_order_math.py  test_p2_models.py  test_p3_models.py  test_permissions.py  test_points.py  test_quotas.py  test_security.py  test_timer_math.py  test_widget_social.py  test_widget_static.py
apps/bridge-wa/: README.md  config.go  device.go  events.go  go.mod  main.go  manager.go  media.go
apps/edge/: main.py  split_redirect.py
apps/flow_engine/: actions.py  conditions.py  context.py  interpreter.py  runtime.py  stats.py  triggers.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/widget/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.loader.config.ts
apps/widget/scripts/: dev-server.mjs  size-check.mjs
apps/widget/tests/: chatUrl.test.ts  i18n.test.ts  messageFromPayload.test.ts  protocol.test.ts  store.test.ts
docs/: PROJECT_STATE.md  channel-integration.md
infra/: DEPLOY.md  backend.Dockerfile  bridge-wa.Dockerfile  docker-compose.yml  embed.Dockerfile  embed_server.py  web.Dockerfile
infra/nginx/: site-chat.conf  web.conf
(+336 files in other folders)
