[project]
name = "smartchat"
version = "0.1.0"
description = "SmartChat — omnichannel customer service & marketing platform (multi-tenant SaaS)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "arq>=0.26",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "cryptography>=42.0",
    "uuid7>=0.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aioimaplib>=1.1",
    "aiosmtplib>=3.0",
    "minio>=7.2",
    "lingua-language-detector>=2.0",
    "orjson>=3.10",
    "segno>=1.6",
    "user-agents>=2.2",
    "tzdata>=2024.1",
    "stripe>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "locust>=2.29",
    "testcontainers>=4.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "packages/py_contracts/tests"]
